--- a/COVID-19/Views/DadosCovids/Delete.cshtml
+++ b/COVID-19/Views/DadosCovids/Delete.cshtml
@@ -1,27 +1,45 @@
 ﻿@model COVID19.Models.DadoCovid
 
 @{
-    ViewData["Title"] = "Delete";
+    ViewData["Title"] = "Deletar dados";
 }
 
-<h2>Delete</h2>
+<h1>Deletar dados</h1>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>Tem certeza que deseja deletar estes dados?</h3>
 <div>
-    <h4>DadoCovid</h4>
+    <h4>Dados Covid-19</h4>
     <hr />
-    <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.Paises)
+    <dl class="row">
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.mortes)
         </dt>
-        <dd>
-            @Html.DisplayFor(model => model.Paises.id)
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.mortes)
+        </dd>
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.confirmados)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.confirmados)
+        </dd>
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.recuperados)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.recuperados)
+        </dd>
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.pais)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.pais.nomePais)
         </dd>
     </dl>
-    
+
     <form asp-action="Delete">
         <input type="hidden" asp-for="id" />
-        <input type="submit" value="Delete" class="btn btn-default" /> |
-        <a asp-action="Index">Back to List</a>
+        <input type="submit" value="Deletar" class="btn btn-danger" /> |
+        <a asp-action="Index" class="btn">Voltar à lista</a>
     </form>
 </div>
