--- a/COVID-19/Views/DadosCovids/Details.cshtml
+++ b/COVID-19/Views/DadosCovids/Details.cshtml
@@ -1,24 +1,42 @@
 ﻿@model COVID19.Models.DadoCovid
 
 @{
-    ViewData["Title"] = "Details";
+    ViewData["Title"] = "Detalhes";
 }
 
-<h2>Details</h2>
+<h1>Detalhes</h1>
 
 <div>
-    <h4>DadoCovid</h4>
+    <h4>Dados Covid-19</h4>
     <hr />
-    <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.Paises)
+    <dl class="row">
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.mortes)
         </dt>
-        <dd>
-            @Html.DisplayFor(model => model.Paises.id)
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.mortes)
+        </dd>
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.confirmados)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.confirmados)
+        </dd>
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.recuperados)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.recuperados)
+        </dd>
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.pais)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.pais.nomePais)
         </dd>
     </dl>
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model.id">Edit</a> |
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Edit" asp-route-id="@Model.id" class="btn btn-warning">Editar</a> |
+    <a asp-action="Index" class="btn">Voltar à lista</a>
 </div>
