--- a/COVID-19/Views/Paises/Delete.cshtml
+++ b/COVID-19/Views/Paises/Delete.cshtml
@@ -1,21 +1,28 @@
 ﻿@model COVID19.Models.Pais
 
 @{
-    ViewData["Title"] = "Delete";
+    ViewData["Title"] = "Deletar país";
 }
 
-<h2>Delete</h2>
+<h1>Deletar país</h1>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>Tem certeza que deseja deletar este país?</h3>
 <div>
-    <h4>Pais</h4>
+    <h4>País</h4>
     <hr />
-    <dl class="dl-horizontal">
+    <dl class="row">
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.nomePais)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.nomePais)
+        </dd>
     </dl>
-    
+
     <form asp-action="Delete">
-        <input type="hidden" asp-for="id" />
-        <input type="submit" value="Delete" class="btn btn-default" /> |
-        <a asp-action="Index">Back to List</a>
+        <input type="hidden" asp-for="idPais" />
+        <input type="submit" value="Deletar" class="btn btn-danger" /> |
+        <a asp-action="Index" class="btn">Voltar à lista</a>
     </form>
 </div>
+
