--- a/COVID-19/Views/Paises/Details.cshtml
+++ b/COVID-19/Views/Paises/Details.cshtml
@@ -1,18 +1,24 @@
 ﻿@model COVID19.Models.Pais
 
 @{
-    ViewData["Title"] = "Details";
+    ViewData["Title"] = "Detalhes";
 }
 
-<h2>Details</h2>
+<h1>Detalhes</h1>
 
 <div>
-    <h4>Pais</h4>
+    <h4>País</h4>
     <hr />
-    <dl class="dl-horizontal">
+    <dl class="row">
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.nomePais)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.nomePais)
+        </dd>
     </dl>
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model.id">Edit</a> |
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Edit" asp-route-id="@Model.idPais" class="btn btn-warning">Editar</a> |
+    <a asp-action="Index" class="btn">Voltar à lista</a>
 </div>
