--- a/COVID-19/Views/Paises/Edit.cshtml
+++ b/COVID-19/Views/Paises/Edit.cshtml
@@ -1,26 +1,34 @@
 ﻿@model COVID19.Models.Pais
 
 @{
-    ViewData["Title"] = "Edit";
+    ViewData["Title"] = "Editar país";
 }
 
-<h2>Edit</h2>
+<h1>Editar país</h1>
 
-<h4>Pais</h4>
+<h4>País</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
         <form asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <input type="hidden" asp-for="id" />
+            <input type="hidden" asp-for="idPais" />
             <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-default" />
+                <label asp-for="nomePais" class="control-label"></label>
+                <input asp-for="nomePais" class="form-control" />
+                <span asp-validation-for="nomePais" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <input type="submit" value="Salvar" class="btn btn-success" />
             </div>
         </form>
     </div>
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index" class="btn">Voltar à lista</a>
 </div>
 
+@section Scripts {
+    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+}
