--- a/COVID-19/Views/Paises/Index.cshtml
+++ b/COVID-19/Views/Paises/Index.cshtml
@@ -1,29 +1,43 @@
 ﻿@model IEnumerable<COVID19.Models.Pais>
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Países";
 }
 
-<h2>Index</h2>
+<h1>Países</h1>
 
-<p>
-    <a asp-action="Create">Create New</a>
-</p>
 <table class="table">
     <thead>
         <tr>
+            <th>
+                @Html.DisplayNameFor(model => model.nomePais)
+            </th>
             <th></th>
         </tr>
     </thead>
     <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <td>
-                <a asp-action="Edit" asp-route-id="@item.id">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.id">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.id">Delete</a>
-            </td>
-        </tr>
-}
+        @foreach (var item in Model)
+        {
+            <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => item.nomePais)
+                </td>
+                @if (User.Identity.IsAuthenticated)
+                {
+                    <td>
+                        <a asp-action="Details" asp-route-id="@item.idPais" class="btn btn-primary">Detalhes</a>
+                        <a asp-action="Edit" asp-route-id="@item.idPais" class="btn btn-warning">Editar</a>
+                        <a asp-action="Delete" asp-route-id="@item.idPais" class="btn btn-danger">Delete</a>
+                    </td>
+                }
+            </tr>
+        }
     </tbody>
 </table>
+
+<p>
+    @if (User.Identity.IsAuthenticated)
+    {
+        <a asp-action="Create">Cadastrar novo país</a>
+    }
+</p>
