--- a/COVID-19/Views/Shared/_Layout.cshtml
+++ b/COVID-19/Views/Shared/_Layout.cshtml
@@ -26,7 +26,7 @@
                             </li>
                         }
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="About">Sobre</a>
                         </li>
                     </ul>
                 </div>
@@ -41,7 +41,7 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; 2020 - Covid_19 - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+            &copy; 2020 - Covid_19 - <a asp-area="" asp-controller="Home" asp-action="About">Sobre</a>
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
