Informações na Página Sobre

--- a/COVID-19/Views/Home/About.cshtml
+++ b/COVID-19/Views/Home/About.cshtml
@@ -1,7 +1,29 @@
 ﻿@{
-    ViewData["Title"] = "About";
+    ViewData["Title"] = "Sobre";
 }
 <h2>@ViewData["Title"]</h2>
 <h3>@ViewData["Message"]</h3>
 
-<p>Use this area to provide additional information.</p>
+<div class="container">
+    <div class="col-lg-6" style="display:inline !important">
+        <h3>Professor:</h3> 
+        <p>Hugo Bastos</p>
+    </div>
+
+    <div class="col-lg-6" style="display:inline !important">
+        <h3>Alunos:</h3>
+        <p>Kelton Melo & Marcos Felipe</p>
+    </div>
+
+<p>
+    Trabalho posposto tem a finalidade desenvolver uma aplicação que simule um pequeno Dashboard, com informações sobre a COVID-19 dos países cadastrados por um administrador.
+    O desenvolvimento da aplicação foi feito por meio de:
+</p>
+<p>--> Uma Arquitetura MVC, utilizando a Tecnologia provida pelo ASP.NET CORE - Versão 2.1;</p>
+<p>--> Um Framework Identy, responsável por validar pequenas tratativas de acesso;</p>
+<p>--> Um Entity Framework Core (EF Core), um mapeador moderno de banco de dados de objeto para .NET;</p>
+<p>--> Um recurso de migrações no Entity Core oferece uma maneira de atualizar de forma incremental o esquema de banco de dados para mantê-lo em sincronia com o modelo de dados do aplicativo, preservando os dados existentes no banco de dados.</p>
+</div>
+
+
+
